--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -601,12 +601,20 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "10384a9b-53be-4c1e-8259-9739b4e57a6b",
+   "cell_type": "markdown",
+   "id": "d5fd7add-388c-402c-a747-6a87ca738432",
    "metadata": {},
    "source": [
-    "\n",
     "<Construct an email>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "Subject: Insights from Fetch Data Analysis\n",
@@ -636,9 +644,7 @@
     "3. Clarification is needed on the CATEGORY_1 field in the products table to ensure accurate categorization.\n",
     "\n",
     "Let me know what you think!\n",
-    "Shreya Patel.\n",
-    "\n",
-    "\n"
+    "Shreya Patel.\n"
    ]
   },
   {
