--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -605,7 +605,6 @@
    "id": "d5fd7add-388c-402c-a747-6a87ca738432",
    "metadata": {},
    "source": [
-    "<Construct an email>\n",
     "\n",
     "\n",
     "\n",
@@ -617,6 +616,14 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "** Construct an email **\n",
+    "    \n",
     "Subject: Insights from Fetch Data Analysis\n",
     "\n",
     "Hi business leader,\n",
